Add two more documents
